--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+:root{
+    --theme-blue: #38bdf8;
+}
 *{
     margin: 0;
     padding: 0;
@@ -6,13 +9,19 @@
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 180px 1fr;
+    height: 100vh;
+    width: 100vw;
     
 }
 
 .sidebar{
     grid-column: 1/2;
     grid-row: 1/3;
-    
+    background-color: var(--theme-blue);
+    color: white;
+    display: grid;
+    grid-template-rows: 1fr 3fr 3fr 4fr;
 
 }
 
@@ -21,3 +30,127 @@
     grid-column: 2/3;
     
 }
+
+.header{
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    grid-row: 1/2;
+    height: 180px;
+    
+}
+
+.search-profile{
+    display: grid;
+    grid-template-columns: 1fr 300px;
+
+
+}
+
+.search-bar{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 5fr;
+    gap: 24px;
+
+}
+
+.search{
+    background: none;
+    border: none;
+    width: fit-content;
+    align-self: center;
+    
+    
+}
+
+.search-logo{
+    height: 32px;
+    width: auto;
+}
+.search-button-container{
+    align-self: center;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.profile-info{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-self: center;
+}
+
+/* .notifications{
+    height: 32px;
+} */
+
+.notifications>img{
+    height: 32px;
+}
+
+.profile{
+    display: grid;
+    grid-auto-flow: column;
+}
+
+.logo>img{
+    height: 32px;
+}
+
+.search-bar-input{
+    width: min(60vb, 1000px);
+}
+
+.user{
+    align-self: center;
+}
+
+.actions{
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr;
+}
+
+.greeting{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-self: center;
+}
+
+.user-logo>img{
+    height: 48px;
+}
+.user-logo{
+    text-align: right;
+    padding-right: 32px;
+}
+
+.button-container{
+    align-self: center;
+}
+
+.button-container>button{
+    width: 80px;
+}
+
+.main-content{
+    background-color: lightgray;
+}
+
+.view-controls,
+.useful-links,
+.dashboard-logo{
+    padding-left: 32px;
+}
+
+.dashboard-logo{
+    padding-top: 32px;
+}
+
+
+
+
+
+
+
+
