--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
 :root{
     --theme-blue: #38bdf8;
+    /* --lh: 1.4rem;
+    line-height: var(--lh); */
 }
 *{
     margin: 0;
     padding: 0;
+}
+
+button{
+    all: unset;
+    cursor: pointer;
 }
 
 .container{
@@ -12,6 +19,8 @@
     grid-template-rows: 180px 1fr;
     height: 100vh;
     width: 100vw;
+    box-sizing: border-box;
+    position: relative;
     
 }
 
@@ -28,6 +37,7 @@
 .header,
 .main-content{
     grid-column: 2/3;
+    
     
 }
 
@@ -146,6 +156,139 @@
 .dashboard-logo{
     padding-top: 32px;
 }
+
+.main-content{
+    display: grid;
+    grid-template-columns: 1fr 350px;
+}
+
+.projects{
+    background-color: aqua;
+    padding: 20px;
+}
+
+.info{
+    background-color: black;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    padding-top: 20px;
+    margin-right: 40px;
+}
+
+.project-card-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 200px 200px;
+    grid-auto-flow: row;
+    gap: 20px;
+}
+
+.project-card{
+    background-color: gray;
+    height: 200px;
+}
+
+.announcements{
+    color: white;
+    
+    /* padding-top: 20px;
+    padding-right: 30px;
+    padding-bottom: 20px; */
+}
+
+.announcement-container{
+    display: grid;
+    grid-template-rows: 75px 1px 75px 1px 75px;
+    padding-left: 20px;
+    gap: 5px;
+}
+
+.announcement{
+    align-self: center;
+
+}
+
+.announcement>p{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    font-size: small;
+}
+
+.separator{
+    background-color: gray;
+}
+
+.info{
+    color: white;
+}
+
+
+.trending-container{
+    display: grid;
+    grid-template-rows: repeat(4,50px);
+    padding-left: 20px;
+    gap: 5px;
+    padding-top: 10px;
+}
+
+.trending-profile-icon>img{
+    height: 32px;
+}
+
+.trending-user{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 5px;
+}
+
+.projects{
+    box-sizing: border-box;
+    min-height: 0;
+    max-height: calc(100vh - 180px);
+    overflow-y: auto;
+}
+
+.project-card{
+    display: grid;
+    grid-template-rows: 1fr 32px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    box-sizing: border-box;
+}
+
+.project-actions{
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    gap: 10px;
+    padding-right: 10px;
+}
+
+.actions{
+    height: 32px;
+}
+
+.share{
+    transform: rotate(-90deg);
+}
+
+.project-info>p{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
+}
+
+.project-info{
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+
 
 
 
