Finish CSS Styling for dashboard page
 - Set text and background color

 - Add icons for sidebar

 - Set shapes for containers

 - Removed scrollbar for projects container

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 :root{
-    --theme-blue: #38bdf8;
+    --theme-blue: #0ea5e9;
+    --background-color: #e5e5e5;
+    --card-highlight: #f59e0b;
+    --main-text-color: #6b7280;
     /* --lh: 1.4rem;
     line-height: var(--lh); */
 }
@@ -15,8 +18,8 @@ button{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 180px 1fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 150px 1fr;
     height: 100vh;
     width: 100vw;
     box-sizing: border-box;
@@ -45,13 +48,16 @@ button{
     display: grid;
     grid-template-rows: 1fr 2fr;
     grid-row: 1/2;
-    height: 180px;
-    
+    height: 150px;
+    box-shadow: 0px 5px 5px gray;
+    position: relative;
+    padding-top: 10px;
+    box-sizing: border-box;
 }
 
 .search-profile{
     display: grid;
-    grid-template-columns: 1fr 300px;
+    grid-template-columns: 1fr 500px;
 
 
 }
@@ -61,6 +67,7 @@ button{
     align-items: center;
     grid-template-columns: 1fr 5fr;
     gap: 24px;
+    padding-right: 30px;
 
 }
 
@@ -82,7 +89,6 @@ button{
     width: 100%;
     display: flex;
     justify-content: flex-end;
-
 }
 
 .profile-info{
@@ -119,6 +125,7 @@ button{
 .actions{
     display: grid;
     grid-template-columns: 5fr 1fr 1fr 1fr;
+    align-self: center;
 }
 
 .greeting{
@@ -141,10 +148,11 @@ button{
 
 .button-container>button{
     width: 80px;
+    font-weight: bolder;
 }
 
 .main-content{
-    background-color: lightgray;
+    background-color: var(--background-color);
 }
 
 .view-controls,
@@ -155,6 +163,10 @@ button{
 
 .dashboard-logo{
     padding-top: 32px;
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    gap: 15px;
+
 }
 
 .main-content{
@@ -163,15 +175,18 @@ button{
 }
 
 .projects{
-    background-color: aqua;
     padding: 20px;
+    
+}
+
+::-webkit-scrollbar{
+    width: 0px;
 }
 
 .info{
-    background-color: black;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    gap: 20px;
+    gap: 30px;
     padding-top: 20px;
     margin-right: 40px;
 }
@@ -185,12 +200,17 @@ button{
 }
 
 .project-card{
-    background-color: gray;
+    background-color: white;
+    border-radius: 10px;
+    
+    border-left-style: solid;
+    border-left-color: var(--card-highlight);
+    border-left-width: 10px;
     height: 200px;
 }
 
 .announcements{
-    color: white;
+    color: black;
     
     /* padding-top: 20px;
     padding-right: 30px;
@@ -202,10 +222,12 @@ button{
     grid-template-rows: 75px 1px 75px 1px 75px;
     padding-left: 20px;
     gap: 5px;
+    padding: 20px;
 }
 
 .announcement{
     align-self: center;
+    color: black;
 
 }
 
@@ -222,7 +244,7 @@ button{
 }
 
 .info{
-    color: white;
+    color: black;
 }
 
 
@@ -232,6 +254,10 @@ button{
     padding-left: 20px;
     gap: 5px;
     padding-top: 10px;
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 1px 5px 5px gray;
 }
 
 .trending-profile-icon>img{
@@ -257,6 +283,7 @@ button{
     padding-top: 25px;
     padding-bottom: 25px;
     box-sizing: border-box;
+    box-shadow: 1px 5px 5px gray;
 }
 
 .project-actions{
@@ -288,7 +315,100 @@ button{
     padding-right: 10px;
 }
 
+li{
+    margin: 20px;
+}
 
+.projects>h3{
+    padding-bottom: 10px;
+}
+
+.button-container>button{
+    background-color: var(--theme-blue);
+    height: 35px;
+    width: 96px;
+    text-align: center;
+    border-radius: 16px;
+    color: white;
+}
+
+.user-logo>img,
+.logo>img,
+.trending-profile-icon>img{
+    border-radius: 50%;
+}
+
+.announcement-container{
+    background-color: white;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 1px 5px 5px gray;
+}
+
+.trending>h3,
+.announcements>h3{
+    padding-bottom: 10px;
+}
+
+.search-bar-input{
+    background-color: var(--background-color);
+    height: 28px;
+    border-radius: calc(.5 * 24px);
+    border: none;
+    padding: 5px 10px;
+}
+
+.view-controls,
+.useful-links{
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: 32px;
+    grid-auto-flow: row;
+    grid-auto-rows: 32px;
+    align-self: center;
+    column-gap: 15px;
+    row-gap: 5px;
+}
+
+.useful-links{
+    align-self: center;
+}
+
+.sidebar>.dashboard-logo img{
+    height: 50px;
+    color: white;
+}
+
+.sidebar img{
+    height: 28px;
+    align-self: center;
+    margin: auto;
+    display: block;
+}
+
+.sidebar-logo{
+    align-self: center;
+    text-align: center;
+
+}
+
+.sidebar h4{
+    align-self: center;
+    font-size: large;
+}
+
+.main-content p{
+    color: var(--main-text-color);
+}
+
+.greeting-text>p{
+    font-weight: bold;
+}
+
+.logo{
+    text-align: right;
+    padding-right: 20px;
+}
 
 
 
